Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111330

error: Not a signal or slot declaration in code generated by qt_add_dbus_interface

XMLWordPrintable

    • aea92807b (6.5.0), 50d4e338c (6.5.1), 44b5ad01f (dev), ad1465d62 (6.5), 439be6ac2 (6.5.2), 838f66be5 (6.6)

      In KWallet we use qt_add_dbus_interface to generated code from a DBus XML file. The file contains a method declaration like this:

       

      <method name="pamOpen">
        <arg name="wallet" type="s" direction="in"/>
        <arg name="passwordHash" type="ay" direction="in"/>
        <arg name="sessionTimeout" type="i" direction="in"/>
        <annotation name="org.freedesktop.DBus.Method.NoReply" value="true"/>
      </method>

      This results in the following generated code:

       

       

      Q_NOREPLY inline void pamOpen(const QString &wallet, const QByteArray &passwordHash, int sessionTimeout){
      ...
      }

       

       

      When compiling this results in

       

      /home/nico/kde6/build/kwallet/src/api/KWallet/kwallet_interface.h:210:1: error: Not a signal or slot declaration 

      where line 210 is the aforementioned function definition.

       

      This is with Qt from dev branch (qtbase commit 360f69b74b5e28ea1cfb0ed1ead624d0323dfe09). The same code worked fine with an earlier version of dev/6.5

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fabiankosmale Fabian Kosmale
            nicolasfella Nicolas Fella
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: